Minor changes on CV

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -32,7 +32,7 @@
 
 \begin{document}
 
-    \header{Sergio}{GarcíaPrado}{junior data scientist \faCode} % Your name and current job title/field
+    \header{Sergio}{GarcíaPrado}{junior data \{ engineer, scientist \}} % Your name and current job title/field
 
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -50,7 +50,7 @@
             \href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
             \href{https://github.com/garciparedes}{\quad{\color{red} $\varheartsuit$}\quad\textbf{Github}\quad\faGithub }
             \href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
-            \href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane }
+            \href{https://telegram.me/garciparedes}{Telegram\quad\faPaperPlane }
             \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
             \href{https://www.last.fm/user/garciparedes/listening-report/week}{Lastfm\quad\faLastfm}
         \section{languages}
