Added kaggle link

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -47,12 +47,11 @@
             \href{tel:+34 696 904 878}{+34 696 904 878}
             \href{mailto:sergio@garciparedes.me}{sergio@garciparedes.me}
         \section{social}
-            \href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
             \href{https://github.com/garciparedes}{\quad{\color{red} $\varheartsuit$}\quad\textbf{Github}\quad\faGithub }
+            \href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
             \href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
-            \href{https://telegram.me/garciparedes}{Telegram\quad\faPaperPlane }
             \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
-            \href{https://www.last.fm/user/garciparedes/listening-report/week}{Lastfm\quad\faLastfm}
+            \href{https://www.kaggle.com/garciparedes}{Kaggle\quad\faTrophy }
         \section{languages}
             spanish bilingual
             english medium
