--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -20,25 +20,25 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
+\documentclass{friggeri-cv}
 \usepackage{enumitem}
 \usepackage{verbatim}
 \usepackage[spanish]{babel}
 
 \usepackage{fontawesome}
 
-\addbibresource{bibliography.bib} % Specify the bibliography file to include publications
+\addbibresource{bibliography.bib}
 
 
 \begin{document}
 
-    \header{Sergio}{GarcíaPrado}{junior data \{ engineer, scientist \}} % Your name and current job title/field
+    \header{Sergio}{GarcíaPrado}{junior data \{ engineer, scientist \}}
 
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
 %-------------------------------------------------------------------------------
 
-    \begin{aside} % In the aside, each new line forces a line break
+    \begin{aside}
 
         \section{contact}
             ~
@@ -53,7 +53,7 @@
             \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
             \href{https://www.kaggle.com/garciparedes}{Kaggle\quad\faTrophy }
         \section{languages}
-            spanish bilingual
+            spanish native
             english medium
     \end{aside}
 
@@ -67,9 +67,9 @@
 
         Currently, I'm starting a Bachelor's Degree of Statistics at the University of Valladolid. The reason is because of during my Bachelor's Degree of Computer Engineering the mathematical curiosity arose in me. So I think the combination of my previous engineer knowledge with my future scientific learning will be enriching to raise and solve complex problems.
 
-        During my first years of coding I've worked on different projects, related with Android development (like EvaluaMe), TypeScript version of Angular (like D'HondtAnalyzer) or the development of enterprise websites using WordPress (like during my internship at Brooktec).
+        During my first years of coding I've worked on different projects, related with \texttt{Android} development (like EvaluaMe), \texttt{TypeScript} version of \texttt{Angular} (like D'HondtAnalyzer) or the development of enterprise websites using \texttt{WordPress} (like during my internship at \emph{Brooktec}).
 
-        But, in the last year I focus my work on numerical computation, statistical results, machine learning algorithms and graph problems. Mostly using Python and libraries like NumPy, Pandas or NetworkX. Also, during my final degree project of Computer Engineering I have used TensorFlow to start a Graph Library on top of it.
+        But, in the last year I focus my work on numerical computation, statistical methods, machine learning algorithms and graph problems. Mostly using \texttt{Python} and libraries like \texttt{NumPy}, \texttt{Pandas} and \texttt{NetworkX}. Also, during my final degree project of Computer Engineering I have used TensorFlow to start a Graph Library on top of it.
 
         \noindent
         \begin{minipage}[t]{0.5\linewidth}
@@ -89,9 +89,9 @@
             \item{Agile Methodologies}
             \item{Version Control Systems (VCS)}
           	\item{\LaTeX \ Writting}
-            \item{TensorFlow Development}
-            \item{Android Development}
-            \item{Angular Development}
+            \item{\texttt{TensorFlow} Development}
+            \item{\texttt{Android} Development}
+            \item{\texttt{Angular} Development}
           \end{itemize}
         \end{minipage}
         \par\bigskip
