--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -1,29 +1,8 @@
 % !TEX encoding = UTF-8 Unicode
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Friggeri Resume/CV
-% XeLaTeX Template
-% Version 1.2 (3/5/15)
-%
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% Adrien Friggeri (adrien@friggeri.net)
-% https://github.com/afriggeri/CV
-%
-% License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-%
-% Important notes:
-% This template needs to be compiled with XeLaTeX and the bibliography, if used,
-% needs to be compiled with biber rather than bibtex.
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \documentclass{friggeri-cv}
 \usepackage{enumitem}
 \usepackage{verbatim}
-\usepackage[spanish]{babel}
+\usepackage[english]{babel}
 
 \usepackage{fontawesome}
 
@@ -56,6 +35,7 @@
       english medium
   \end{aside}
 
+%-------------------------------------------------------------------------------
 
 
 %-------------------------------------------------------------------------------
