--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -17,23 +17,31 @@
 %	SIDEBAR SECTION
 %-------------------------------------------------------------------------------
 
-  \begin{aside}
-    \section{contact}
-      ~
-      \href{http://garciparedes.me}{\textbf{garciparedes.me}}
-      ~
-      \href{tel:+34 696 904 878}{+34 696 904 878}
-      \href{mailto:sergio@garciparedes.me}{sergio@garciparedes.me}
-    \section{social}
-      \href{https://github.com/garciparedes}{\quad{\color{red} $\varheartsuit$}\quad\textbf{Github}\quad\faGithub }
-      \href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
-      \href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
-      \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
-      \href{https://www.kaggle.com/garciparedes}{Kaggle\quad\faTrophy }
-    \section{languages}
-      spanish native
-      english medium
-  \end{aside}
+  \section{social}
+
+    \begin{center}
+      \renewcommand{\arraystretch}{1.5}
+      \begin{tabular}{ p{16em} p{16em} p{16em} }
+        \href{http://garciparedes.me}{\faHome\quad Website: garciparedes.me}
+        &
+        \href{tel:+34 696 904 878}{\faPhone\quad Phone: +34 696 904 878}
+        &
+        \href{mailto:sergio@garciparedes.me}{\faEnvelope\quad Email: sergio@garciparedes.me}
+        \\
+        \href{https://github.com/garciparedes}{\faGithub\quad GitHub: @garciparedes}
+        &
+        \href{https://es.linkedin.com/in/garciparedes/en}{\faLinkedin\quad LinkedIn: Sergio García Prado}
+        &
+        \href{https://scholar.google.es/citations?user=X3Mb7BAAAAAJ}{\faGraduationCap\quad Scholar: Sergio García Prado}
+        \\
+        \href{https://stackoverflow.com/story/garciparedes}{\faStackOverflow\quad StackOverflow: @garciparedes}
+        &
+        \href{https://www.kaggle.com/garciparedes}{\faTrophy\quad Kaggle: @garciparedes}
+        &
+        \href{https://medium.com/@garciparedes}{\faMedium\quad Medium: @garciparedes}
+        \\ \\
+      \end{tabular}
+    \end{center}
 
 %-------------------------------------------------------------------------------
 
