--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -8,6 +8,15 @@
 
 \addbibresource{bibliography.bib}
 
+\newcommand{\myhref}[2]{\href[pdfnewwindow=true]{#1}{#2}}
+\newcommand{\important}[1]{\textbf{\mbox{#1}}}
+\newcommand{\importanthref}[2]{\myhref{#1}{\textbf{\mbox{#1}}}}
+
+\newcommand{\UVa}{\myhref{http://www.uva.es}{University of Valladolid, Spain}}
+\newcommand{\Brooktec}{\myhref{https://brooktec.com/}{Brooktec}}
+\newcommand{\EvaluaMe}{\myhref{https://play.google.com/store/apps/details?id=com.garciparedes.evaluame}{EvaluaMe}}
+\newcommand{\TFGraph}{\myhref{https://github.com/tfgraph}{TFGraph}}
+\newcommand{\ngkatex}{\myhref{https://github.com/garciparedes/ng-katex}{ng-katex}}
 
 \begin{document}
 
@@ -22,24 +31,27 @@
     \begin{center}
       \renewcommand{\arraystretch}{1.5}
       \begin{tabular}{ p{16em} p{16em} p{16em} }
-        \href{http://garciparedes.me}{\faHome\quad Website: garciparedes.me}
+        \myhref{https://garciparedes.me}{\faHome\quad Website: garciparedes.me}
         &
-        \href{tel:+34 696 904 878}{\faPhone\quad Phone: +34 696 904 878}
+        \myhref{tel:34696904878}{\faPhone\quad Phone: +34 696 904 878}
         &
-        \href{mailto:sergio@garciparedes.me}{\faEnvelope\quad Email: sergio@garciparedes.me}
+        \myhref{mailto:sergio@garciparedes.me}{\faEnvelope\quad Email: sergio@garciparedes.me}
         \\
-        \href{https://github.com/garciparedes}{\faGithub\quad GitHub: @garciparedes}
+
+        \myhref{https://github.com/garciparedes}{\faGithub\quad GitHub: @garciparedes}
         &
-        \href{https://es.linkedin.com/in/garciparedes/en}{\faLinkedin\quad LinkedIn: Sergio García Prado}
+        \myhref{https://es.linkedin.com/in/garciparedes/en}{\faLinkedin\quad LinkedIn: Sergio García Prado}
         &
-        \href{https://scholar.google.es/citations?user=X3Mb7BAAAAAJ}{\faGraduationCap\quad Scholar: Sergio García Prado}
+        \myhref{https://scholar.google.es/citations?user=X3Mb7BAAAAAJ}{\faGraduationCap\quad Scholar: Sergio García Prado}
         \\
-        \href{https://stackoverflow.com/story/garciparedes}{\faStackOverflow\quad StackOverflow: @garciparedes}
+
+        \myhref{https://stackoverflow.com/story/garciparedes}{\faStackOverflow\quad StackOverflow: @garciparedes}
         &
-        \href{https://www.kaggle.com/garciparedes}{\faTrophy\quad Kaggle: @garciparedes}
+        \myhref{https://www.kaggle.com/garciparedes}{\faTrophy\quad Kaggle: @garciparedes}
         &
-        \href{https://medium.com/@garciparedes}{\faMedium\quad Medium: @garciparedes}
+        \myhref{https://medium.com/@garciparedes}{\faMedium\quad Medium: @garciparedes}
         \\ \\
+
       \end{tabular}
     \end{center}
 
@@ -52,11 +64,15 @@
 
   \section{summary}
 
-    Currently, I'm starting a Bachelor's Degree of Statistics at the University of Valladolid. The reason is because of during my Bachelor's Degree of Computer Engineering the mathematical curiosity arose in me. So I think the combination of my previous engineer knowledge with my future scientific learning will be enriching to raise and solve complex problems.
+    Hi! My name is Sergio and currently I'm enrolled in Bachelor's Degree in \important{Statistics} at \UVa. The reason is because during my Bachelor's Degree in \important{Computer Engineering} the mathematical curiosity arose me. For this reason, I think the merge of my previous engineering knowledge combined with my future scientific learning will enrich me to raise and solve complex problems. In following paragraphs I will describe my professional profile.
 
-    During my first years of coding I've worked on different projects, related with \texttt{Android} development (like EvaluaMe), \texttt{TypeScript} version of \texttt{Angular} (like D'HondtAnalyzer) or the development of enterprise websites using \texttt{WordPress} (like during my internship at \emph{Brooktec}).
+    During my first years of coding I've learned \texttt{Java} at University, and \texttt{Android} at my home, then I developed \important{\EvaluaMe} app. After that, I started to be curious about web development (I really like \texttt{TypeScript}, especially when is boosted with \texttt{Angular}). Also, I've worked with \texttt{PHP} and \texttt{WordPress} in during my internship at \important{\Brooktec}, but I prefer not to work with those technologies anymore.
 
-    But, in the last year I focus my work on numerical computation, statistical methods, machine learning algorithms and graph problems. Mostly using \texttt{Python} and libraries like \texttt{NumPy}, \texttt{Pandas} and \texttt{NetworkX}. Also, during my final degree project of Computer Engineering I have used TensorFlow to start a Graph Library on top of it.
+    In the writting area, I've started to use \texttt{\LaTeX} as a way to submit class assigments in a cleaner way, but it has become in one of my passions. Right now is the primary method I used to comunicate important things, but not the only one. Another of my favorite ways (especially when code is involved) is \texttt{Jupyter Notebook}, like I will explain bellow.
+
+    During my Computer's Engineering Degree last year I focused my work on numerical computation, statistical methods, machine learning algorithms and graph problems. Mostly using \texttt{Python} and libraries like \texttt{NumPy}, \texttt{Pandas}, \texttt{NetworkX}, etc. Also, for my final degree project of Computer Engineering, I've started an open source project called \important{\TFGraph} which consist of a graph library  on top of \texttt{TensorFlow}.
+
+    In previous paragraphs I've explained my background and favorite technologies that I love to use. Bellow, I'll show you some of my skills in more abstract way:
 
     \noindent
     \begin{minipage}[t]{0.5\linewidth}
@@ -67,18 +83,16 @@
         \item{Statistical Computation}
         \item{Data Visualization}
         \item{Machine Learning Techniques}
-        \item{Graph Theory}
       \end{itemize}
     \end{minipage}%
     \begin{minipage}[t]{0.5\linewidth}
       \begin{itemize}
+        \item{Graph Theory}
+      	\item{Academic Writting}
+        \item{Research Work}
         \item{Code Standards (OOP - Docs - Tests)}
         \item{Agile Methodologies}
         \item{Version Control Systems (VCS)}
-      	\item{\LaTeX \ Writting}
-        \item{\texttt{TensorFlow} Development}
-        \item{\texttt{Android} Development}
-        \item{\texttt{Angular} Development}
       \end{itemize}
     \end{minipage}
     \par\bigskip
@@ -95,29 +109,65 @@
     \begin{entrylist}
 
       \entry
-      {2017}
-      {Open Source Developer}
-      {TFGraph}
-      {Final Degree Project (5 months)}
-
-      \\
-      \entry
       {2016}
       {Full Stack Developer}
-      {Brooktec}
+      {\Brooktec}
       {Internship (4 months)}
-
-      \\
-      \entry
-      {2015-2016}
-      {Android Developer}
-      {EvaluaMe}
-      {Pet Project}
 
     \end{entrylist}
 
 %-------------------------------------------------------------------------------
 
+%-------------------------------------------------------------------------------
+%	PROJECTS SECTION
+%-------------------------------------------------------------------------------
+
+  \section{projects}
+
+    \begin{entrylist}
+
+      \entry
+      {2017--present}
+      {\ngkatex}
+      {Angular}
+      {TeX math expressions processing on browsers boosted by KaTeX}
+
+      \\
+      \entry
+      {2017}
+      {\TFGraph}
+      {Python}
+      {Graph networks processing on GPUs}
+
+      \\
+      \entry
+      {2015--2016}
+      {\EvaluaMe}
+      {Android}
+      {Tracker app for your school marks}
+
+    \end{entrylist}
+
+%-------------------------------------------------------------------------------
+
+
+%-------------------------------------------------------------------------------
+%	PUBLICATIONS SECTION
+%-------------------------------------------------------------------------------
+
+  \section{publications}
+
+    \begin{entrylist}
+
+      \entry
+      {2017}
+      {\myhref{https://arxiv.org/abs/1708.07829}{Algorithms for Big Data: Graphs and PageRank}}
+      {\UVa}
+      {Final Degree Project}
+
+    \end{entrylist}
+
+%-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -129,15 +179,15 @@
 
       \entry
       {2017--present}
-      {Bachelor's Degree {\normalfont of Statistics}}
-      {University of Valladolid, Spain}
+      {\myhref{http://www.eio.uva.es/}{Bachelor's Degree {\normalfont of Statistics}}}
+      {\UVa}
       {}
 
       \\
       \entry
       {2013--2017}
-      {Bachelor's Degree {\normalfont of Computer Engineering}}
-      {University of Valladolid, Spain}
+      {\myhref{https://www.inf.uva.es/}{Bachelor's Degree {\normalfont of Computer Engineering}}}
+      {\UVa}
       {Specialized in Computation}
 
       \\
@@ -162,59 +212,59 @@
 
       \entry
       {2017}
-      {Parallel Computing}
-      {University of Valladolid, Spain}
+      {\myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46929.pdf}{Parallel Computing}}
+      {\UVa}
       {Score: 9.9/10.0 with Honors}
 
       \entry
       {}
-      {Operation Research Models}
-      {University of Valladolid, Spain}
+      {\myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46959.pdf}{Operation Research Models}}
+      {\UVa}
       {Score: 9.5/10.0 with Honors}
 
       \entry
       {}
-      {Data Mining}
-      {University of Valladolid, Spain}
+      {\myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46970.pdf}{Data Mining}}
+      {\UVa}
       {Score: 9.0/10.0}
 
       \entry
       {}
-      {Machine Learning Techniques}
-      {University of Valladolid, Spain}
+      {\myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46932.pdf}{Machine Learning Techniques}}
+      {\UVa}
       {Score: 9.0/10.0}
 
       \\
       \entry
       {2016}
-      {Codes and Cryptography}
-      {University of Valladolid, Spain}
+      {\myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46948.pdf}{Codes and Cryptography}}
+      {\UVa}
       {Score: 10.0/10.0 with Honors}
 
       \entry
       {}
-      {Algorithms and Computing}
-      {University of Valladolid, Spain}
+      {\myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46944.pdf}{Algorithms and Computing}}
+      {\UVa}
       {Score: 9.5/10.0 with Honors}
 
       \entry
       {}
-      {Web Services and Systems}
-      {University of Valladolid, Spain}
+      {\myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46931.pdf}{Web Services and Systems}}
+      {\UVa}
       {Score: 9.0/10.0}
 
       \\
       \entry
       {2015}
-      {Operating Systems Structures}
-      {University of Valladolid, Spain}
+      {\myhref{https://www.inf.uva.es/wp-content/uploads/2014/07/G46915.pdf}{Operating Systems Structures}}
+      {\UVa}
       {Score: 9.5/10.0 with Honors}
 
       \\
       \entry
       {2014}
-      {Fundamentals of Computer Networks}
-      {University of Valladolid, Spain}
+      {\myhref{https://www.inf.uva.es/wp-content/uploads/2012/07/C12-45187-RED.pdf}{Fundamentals of Computer Networks}}
+      {\UVa}
       {Score: 9.0/10.0}
 
     \end{entrylist}
