--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -68,9 +68,11 @@
 
     During my first years of coding I've learned \texttt{Java} at University, and \texttt{Android} at my home, then I developed \important{\EvaluaMe} app. After that, I started to be curious about web development (I really like \texttt{TypeScript}, especially when is boosted with \texttt{Angular}). Also, I've worked with \texttt{PHP} and \texttt{WordPress} in during my internship at \important{\Brooktec}, but I prefer not to work with those technologies anymore.
 
-    In the writting area, I've started to use \texttt{\LaTeX} as a way to submit class assigments in a cleaner way, but it has become in one of my passions. Right now is the primary method I used to comunicate important things, but not the only one. Another of my favorite ways (especially when code is involved) is \texttt{Jupyter Notebook}, like I will explain bellow.
+    In the writting area, I've started to use \LaTeX\ as a way to submit class assigments in a cleaner way, but it has become in one of my passions. Another of my favorite ways to communicate things (especially when code is involved) is \texttt{Jupyter Notebook}.
 
-    During my Computer's Engineering Degree last year I focused my work on numerical computation, statistical methods, machine learning algorithms and graph problems. Mostly using \texttt{Python} and libraries like \texttt{NumPy}, \texttt{Pandas}, \texttt{NetworkX}, etc. Also, for my final degree project of Computer Engineering, I've started an open source project called \important{\TFGraph} which consist of a graph library  on top of \texttt{TensorFlow}.
+    During my Computer's Engineering Degree last year I focused my work on numerical computation, statistical methods, machine learning algorithms and graph problems. Mostly using \texttt{Python} and libraries like \texttt{NumPy}, \texttt{Pandas}, \texttt{NetworkX}, etc. Also, for my final degree project of Computer Engineering, I've started an open source project called \important{\TFGraph} which consist of a graph library  on top of \texttt{TensorFlow}. To learn more about packaging and library distribution I've developed \important{\ngkatex}, an Angular module distributed over \texttt{npm} that allows you to visualize \TeX\ math expressions on browsers boosted by \texttt{KaTeX}.
+
+    Because my data passion (and the Statistics degree enrollment) I want to focus my work on statistical computation, that is everything related with data analysis and processing. For this reason I've learned \texttt{R} language and libraries like \texttt{tidyverse}, \texttt{data.table}, etc. Currently, I'm involved in learning amazing probability theory, inference techniques, classification methods, multivariate analysis, etc. to apply all this theory on research of new exciting algorithms of prediction.
 
     In previous paragraphs I've explained my background and favorite technologies that I love to use. Bellow, I'll show you some of my skills in more abstract way:
 
@@ -99,6 +101,7 @@
 
 %-------------------------------------------------------------------------------
 
+  \pagebreak
 
 %-------------------------------------------------------------------------------
 %	WORK SECTION
@@ -130,7 +133,7 @@
       {2017--present}
       {\ngkatex}
       {Angular}
-      {TeX math expressions processing on browsers boosted by KaTeX}
+      {\TeX\ math expressions processing on browsers boosted by KaTeX}
 
       \\
       \entry
@@ -179,23 +182,23 @@
 
       \entry
       {2017--present}
-      {\myhref{http://www.eio.uva.es/}{Bachelor's Degree {\normalfont of Statistics}}}
+      {\myhref{http://www.eio.uva.es/}{Statistics}}
       {\UVa}
-      {}
+      {Bachelor's Degree}
 
       \\
       \entry
       {2013--2017}
-      {\myhref{https://www.inf.uva.es/}{Bachelor's Degree {\normalfont of Computer Engineering}}}
+      {\myhref{https://www.inf.uva.es/}{Computer Engineering, mention in Computation}}
       {\UVa}
-      {Specialized in Computation}
+      {Bachelor's Degree}
 
       \\
       \entry
       {2010--2012}
-      {High School {\normalfont of Social Sciences}}
+      {Social Sciences}
       {IES Alonso Berruguete, Spain}
-      {}
+      {High School}
 
     \end{entrylist}
 
