--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -3,10 +3,8 @@
 \usepackage{enumitem}
 \usepackage{verbatim}
 \usepackage[english]{babel}
-
 \usepackage{fontawesome}
-
-\addbibresource{bibliography.bib}
+\usepackage{fancyhdr}
 
 \newcommand{\myhref}[2]{\href[pdfnewwindow=true]{#1}{#2}}
 \newcommand{\important}[1]{\textbf{\mbox{#1}}}
@@ -17,6 +15,11 @@
 \newcommand{\EvaluaMe}{\myhref{https://play.google.com/store/apps/details?id=com.garciparedes.evaluame}{EvaluaMe}}
 \newcommand{\TFGraph}{\myhref{https://github.com/tfgraph}{TFGraph}}
 \newcommand{\ngkatex}{\myhref{https://github.com/garciparedes/ng-katex}{ng-katex}}
+
+\pagestyle{fancy}
+\fancyhf{}
+\rhead{junior data \{ engineer, scientist \}}
+\lhead{Sergio García Prado}
 
 \begin{document}
 
@@ -72,7 +75,7 @@
 
     During my Computer's Engineering Degree last year I focused my work on numerical computation, statistical methods, machine learning algorithms and graph problems. Mostly using \texttt{Python} and libraries like \texttt{NumPy}, \texttt{Pandas}, \texttt{NetworkX}, etc. Also, for my final degree project of Computer Engineering, I've started an open source project called \important{\TFGraph} which consist of a graph library  on top of \texttt{TensorFlow}. To learn more about packaging and library distribution I've developed \important{\ngkatex}, an Angular module distributed over \texttt{npm} that allows you to visualize \TeX\ math expressions on browsers boosted by \texttt{KaTeX}.
 
-    Because my data passion (and the Statistics degree enrollment) I want to focus my work on statistical computation, that is everything related with data analysis and processing. For this reason I've learned \texttt{R} language and libraries like \texttt{tidyverse}, \texttt{data.table}, etc. Currently, I'm involved in learning amazing probability theory, inference techniques, classification methods, multivariate analysis, etc. to apply all this theory on research of new exciting algorithms of prediction.
+    Because my data passion (and the Statistics degree enrollment) I want to focus my work on statistical computation, that is everything related with data analysis and processing. For this reason I've learned \texttt{R} language and libraries like \texttt{tidyverse}, \texttt{data.table}, etc. Currently, I'm involved in learning amazing things related with probability theory, inference techniques, classification methods, multivariate analysis, etc.
 
     In previous paragraphs I've explained my background and favorite technologies that I love to use. Bellow, I'll show you some of my skills in more abstract way:
 
@@ -98,6 +101,8 @@
       \end{itemize}
     \end{minipage}
     \par\bigskip
+
+    As you've seen I want to work in posisitios related with Machine Learning, Big Data and Data Analysis. If you're offering for a related job don't hesitate to contact me. In the following pages you can visualize my background in a more classical way.
 
 %-------------------------------------------------------------------------------
 
