--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -75,7 +75,7 @@
 
     During my Computer's Engineering Degree last year I focused my work on numerical computation, statistical methods, machine learning algorithms and graph problems. Mostly using \texttt{Python} and libraries like \texttt{NumPy}, \texttt{Pandas}, \texttt{NetworkX}, etc. Also, for my final degree project of Computer Engineering, I've started an open source project called \important{\TFGraph} which consist of a graph library  on top of \texttt{TensorFlow}. To learn more about packaging and library distribution I've developed \important{\ngkatex}, an Angular module distributed over \texttt{npm} that allows you to visualize \TeX\ math expressions on browsers boosted by \texttt{KaTeX}.
 
-    Because my data passion (and the Statistics degree enrollment) I want to focus my work on statistical computation, that is everything related with data analysis and processing. For this reason I've learned \texttt{R} language and libraries like \texttt{tidyverse}, \texttt{data.table}, etc. Currently, I'm involved in learning amazing things related with probability theory, inference techniques, classification methods, multivariate analysis, etc.
+    Due to my data passion I want to focus my future work on statistical computation, that is everything related with the research and implementation of new techniques of process, analize and and predict it. For this reason I've learned \texttt{R} language and libraries like \texttt{tidyverse}, \texttt{data.table}, etc. Currently, I'm involved in learning amazing things related with probability theory, inference techniques, classification methods, multivariate analysis, etc.
 
     In previous paragraphs I've explained my background and favorite technologies that I love to use. Bellow, I'll show you some of my skills in more abstract way:
 
