Fixed minor bug related with stackoverflow link

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -48,7 +48,7 @@
         \myhref{https://scholar.google.es/citations?user=X3Mb7BAAAAAJ}{\faGraduationCap\quad Scholar: Sergio García Prado}
         \\
 
-        \myhref{https://stackoverflow.com/story/garciparedes}{\faStackOverflow\quad StackOverflow: @garciparedes}
+        \myhref{https://stackoverflow.com/users/3921457/garciparedes}{\faStackOverflow\quad StackOverflow: @garciparedes}
         &
         \myhref{https://www.kaggle.com/garciparedes}{\faTrophy\quad Kaggle: @garciparedes}
         &
