--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -67,15 +67,15 @@
 
   \section{summary}
 
-    Hi! My name is Sergio and currently I'm enrolled in Bachelor's Degree in \important{Statistics} at \UVa. The reason is because during my Bachelor's Degree in \important{Computer Engineering} the mathematical curiosity arose me. For this reason, I think the merge of my previous engineering knowledge combined with my future scientific learning will enrich me to raise and solve complex problems. In following paragraphs I will describe my professional profile.
+    Hi! My name is Sergio and now I'm enrolled in Bachelor's Degree in \important{Statistics} at \UVa. The reason is because during my Bachelor's Degree in \important{Computer Engineering} the mathematical curiosity arose me. For this reason, I think the merge of my previous engineering knowledge combined with my future scientific learning will enrich me to raise and solve complex problems. In following paragraphs I will describe my professional profile.
 
     During my first years of coding I've learned \texttt{Java} at University, and \texttt{Android} at my home, then I developed \important{\EvaluaMe} app. After that, I started to be curious about web development (I really like \texttt{TypeScript}, especially when is boosted with \texttt{Angular}). Also, I've worked with \texttt{PHP} and \texttt{WordPress} in during my internship at \important{\Brooktec}, but I prefer not to work with those technologies anymore.
 
-    In the writting area, I've started to use \LaTeX\ as a way to submit class assigments in a cleaner way, but it has become in one of my passions. Another of my favorite ways to communicate things (especially when code is involved) is \texttt{Jupyter Notebook}.
+    In the writing area, I've started to use \LaTeX\ as a clean way to submit class assignments in a cleaner way, but it has become in one of my passions. Another of my favourite ways to communicate things (especially when code is involved) is \texttt{Jupyter Notebook}.
 
     During my Computer's Engineering Degree last year I focused my work on numerical computation, statistical methods, machine learning algorithms and graph problems. Mostly using \texttt{Python} and libraries like \texttt{NumPy}, \texttt{Pandas}, \texttt{NetworkX}, etc. Also, for my final degree project of Computer Engineering, I've started an open source project called \important{\TFGraph} which consist of a graph library  on top of \texttt{TensorFlow}. To learn more about packaging and library distribution I've developed \important{\ngkatex}, an Angular module distributed over \texttt{npm} that allows you to visualize \TeX\ math expressions on browsers boosted by \texttt{KaTeX}.
 
-    Due to my data passion I want to focus my future work on statistical computation, that is everything related with the research and implementation of new techniques of process, analize and and predict it. For this reason I've learned \texttt{R} language and libraries like \texttt{tidyverse}, \texttt{data.table}, etc. Currently, I'm involved in learning amazing things related with probability theory, inference techniques, classification methods, multivariate analysis, etc.
+    Due to my data passion I want to focus my future work on statistical computation, that is everything related with the research and implementation of new techniques of process, analyze and and predict it. For this reason I've learned \texttt{R} language and libraries like \texttt{tidyverse}, \texttt{data.table}, etc. Currently, I'm involved in learning amazing things related with probability theory, inference techniques, classification methods, multivariate analysis, etc.
 
     In previous paragraphs I've explained my background and favorite technologies that I love to use. Bellow, I'll show you some of my skills in more abstract way:
 
@@ -102,7 +102,7 @@
     \end{minipage}
     \par\bigskip
 
-    As you've seen I want to work in posisitios related with Machine Learning, Big Data and Data Analysis. If you're offering for a related job don't hesitate to contact me. In the following pages you can visualize my background in a more classical way.
+    As you've seen I want to work in posisitions related with Machine Learning, Big Data and Data Analysis. If you're offering for a related job don't hesitate to contact me. In the following pages you can visualize my background in a more classical way.
 
 %-------------------------------------------------------------------------------
 
