--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -102,7 +102,7 @@
     \end{minipage}
     \par\bigskip
 
-    As you've seen I want to work in posisitions related with Machine Learning, Big Data and Data Analysis. If you're offering for a related job don't hesitate to contact me. In the following pages you can visualize my background in a more classical way.
+    As you've seen I want to work in positions related with Machine Learning, Big Data and Data Analysis. If you're offering for a related job don't hesitate to contact me. In the following pages you can visualize my background in a more classical way.
 
 %-------------------------------------------------------------------------------
 
