--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -117,6 +117,12 @@
     \begin{entrylist}
 
       \entry
+      {2018--present}
+      {Research Assistant}
+      {\UVa}
+      {Internship}
+
+      \entry
       {2016}
       {Full Stack Developer}
       {\Brooktec}
