--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -6,6 +6,8 @@
 \usepackage{fontawesome}
 \usepackage{fancyhdr}
 
+\graphicspath{{./img/}}
+
 \newcommand{\myhref}[2]{\href[pdfnewwindow=true]{#1}{#2}}
 \newcommand{\important}[1]{\textbf{\mbox{#1}}}
 \newcommand{\importanthref}[2]{\myhref{#1}{\textbf{\mbox{#1}}}}
@@ -117,6 +119,7 @@
     \begin{entrylist}
 
       \entry
+      [logo-uva]
       {2018--present}
       {Research Assistant}
       {\UVa}
