Added "Search and use of scientific information" course

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -294,6 +294,13 @@
     \begin{entrylist}
 
       \entry
+      {2018}
+      {Search and Use of Scientific Information}
+      {BUVa}
+      {25 hours}
+
+      \\
+      \entry
       {2017}
       {Scratch Monitor}
       {FUNGE UVa}
