Working on update my cv

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -10,7 +10,8 @@
 \newcommand{\important}[1]{\textbf{\mbox{#1}}}
 \newcommand{\importanthref}[2]{\myhref{#1}{\textbf{\mbox{#1}}}}
 
-\newcommand{\UVa}{\myhref{http://www.uva.es}{University of Valladolid, Spain}}
+\newcommand{\Unlimiteck}{\myhref{https://unlimiteck.com/}{Unlimiteck Company Builder}}
+\newcommand{\UVa}{\myhref{http://www.uva.es}{University of Valladolid}}
 \newcommand{\Brooktec}{\myhref{https://brooktec.com/}{Brooktec}}
 \newcommand{\EvaluaMe}{\myhref{https://play.google.com/store/apps/details?id=com.garciparedes.evaluame}{EvaluaMe}}
 \newcommand{\TFGraph}{\myhref{https://github.com/tfgraph}{TFGraph}}
@@ -18,12 +19,12 @@
 
 \pagestyle{fancy}
 \fancyhf{}
-\rhead{junior data \{ engineer, scientist \}}
+\rhead{Software Engineering | Data Science | Research | Scientific Computation}
 \lhead{Sergio García Prado}
 
 \begin{document}
 
-  \header{Sergio}{GarcíaPrado}{junior data \{ engineer, scientist \}}
+  \header{Sergio}{GarcíaPrado}{Software Engineering | Data Science | Research | Scientific Computation}
 
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -118,13 +119,19 @@
 
       \entry
       {2018--present}
+      {Software Engineer}
+      {\Unlimiteck}
+      {Internship}
+
+      \entry
+      {2018--present}
       {Research Assistant}
       {\UVa}
       {Internship}
 
       \entry
       {2016}
-      {Full Stack Developer}
+      {Software Engineer}
       {\Brooktec}
       {Internship (4 months)}
 
@@ -208,7 +215,7 @@
       \entry
       {2011--2013}
       {Social Sciences}
-      {IES Alonso Berruguete, Spain}
+      {IES Alonso Berruguete}
       {High School}
 
     \end{entrylist}
@@ -224,6 +231,13 @@
 
     \begin{entrylist}
 
+      \entry
+      {2018}
+      {\myhref{https://alojamientos.uva.es/guia_docente/uploads/2017/549/47089/1/Documento.pdf}{Statistical Computing}}
+      {\UVa}
+      {Score: 9.0/10.0}
+
+      \\
       \entry
       {2017}
       {\myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46929.pdf}{Parallel Computing}}
@@ -319,6 +333,31 @@
       {Plastic SCM (Software Control Manager)}
       {Codice Software}
       {8 hours}
+
+    \end{entrylist}
+
+%-------------------------------------------------------------------------------
+
+%-------------------------------------------------------------------------------
+%	LANGUAGES SECTION
+%-------------------------------------------------------------------------------
+
+  \section{languages}
+
+    \begin{entrylist}
+
+      \entry
+      {}
+      {Spanish}
+      {}
+      {Native Fluency}
+
+      \\
+      \entry
+      {}
+      {English}
+      {}
+      {B1 Level (ACLES certificate)}
 
     \end{entrylist}
 
