Updated curriculum vitae

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -118,22 +118,30 @@
     \begin{entrylist}
 
       \entry
-      {2018--present}
+      {2018/09 -- present}
       {Software Engineer}
       {\Unlimiteck}
-      {Internship}
+      {}
 
       \entry
-      {2018--present}
-      {Research Assistant}
+      {2018/06 -- 2018/08}
+      {Software Engineer Intern}
+      {\Unlimiteck}
+      {3 months}
+
+      \\
+      \entry
+      {2018/03 -- 2018/08}
+      {Research Assistant Intern}
       {\UVa}
-      {Internship}
+      {6 months}
 
+      \\
       \entry
-      {2016}
-      {Software Engineer}
+      {2016/06 -- 2016/08}
+      {Software Engineer Intern}
       {\Brooktec}
-      {Internship (4 months)}
+      {3 months}
 
     \end{entrylist}
 
@@ -148,7 +156,7 @@
     \begin{entrylist}
 
       \entry
-      {2017--present}
+      {2017 -- present}
       {\ngkatex}
       {Angular}
       {\TeX\ math expressions processing on browsers boosted by KaTeX}
@@ -162,7 +170,7 @@
 
       \\
       \entry
-      {2015--2016}
+      {2015 -- 2016}
       {\EvaluaMe}
       {Android}
       {Tracker app for your school marks}
@@ -199,21 +207,21 @@
     \begin{entrylist}
 
       \entry
-      {2017--present}
+      {2017 -- present}
       {\myhref{http://www.eio.uva.es/}{Statistics}}
       {\UVa}
       {Bachelor's Degree}
 
       \\
       \entry
-      {2013--2017}
+      {2013 -- 2017}
       {\myhref{https://www.inf.uva.es/}{Computer Engineering, mention in Computation}}
       {\UVa}
       {Bachelor's Degree}
 
       \\
       \entry
-      {2011--2013}
+      {2011 -- 2013}
       {Social Sciences}
       {IES Alonso Berruguete}
       {High School}
@@ -358,6 +366,13 @@
       {English}
       {}
       {B1 Level (ACLES certificate)}
+
+      \\
+      \entry
+      {}
+      {Italian}
+      {}
+      {Elementary proficiency}
 
     \end{entrylist}
 
