--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -11,6 +11,7 @@
 \newcommand{\importanthref}[2]{\myhref{#1}{\textbf{\mbox{#1}}}}
 
 \newcommand{\Unlimiteck}{\myhref{https://unlimiteck.com/}{Unlimiteck Company Builder}}
+\newcommand{\UNIBO}{\myhref{https://www.unibo.it/en}{Università di Bologna}}
 \newcommand{\UVa}{\myhref{http://www.uva.es}{University of Valladolid}}
 \newcommand{\Brooktec}{\myhref{https://brooktec.com/}{Brooktec}}
 \newcommand{\EvaluaMe}{\myhref{https://play.google.com/store/apps/details?id=com.garciparedes.evaluame}{EvaluaMe}}
@@ -205,6 +206,11 @@
   \section{education}
 
     \begin{entrylist}
+      \entry
+      {2019 -- present}
+      {\myhref{http://ems.unibo.it/en/}{Statistics}}
+      {\UNIBO}
+      {Bachelor's \& Master's Degree, Erasmus+ Exchange Student}
 
       \entry
       {2017 -- present}
