--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -210,8 +210,9 @@
       {2019 -- present}
       {\myhref{http://ems.unibo.it/en/}{Statistics}}
       {\UNIBO}
-      {Bachelor's \& Master's Degree, Erasmus+ Exchange Student}
+      {Erasmus+}
 
+      \\
       \entry
       {2017 -- present}
       {\myhref{http://www.eio.uva.es/}{Statistics}}
