Included HackerRank's Python course.

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -331,6 +331,12 @@
 
       \entry
       {2018}
+      {Language Proficiency - Python}
+      {HackerRank}
+      {115 coding challenges}
+
+      \entry
+      {}
       {Search and Use of Scientific Information}
       {BUVa}
       {25 hours}
