Updated style and contents of Curriculum Vitae.

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -34,27 +34,20 @@
   \section{social}
 
     \begin{center}
-      \renewcommand{\arraystretch}{1.5}
-      \begin{tabular}{ p{16em} p{16em} p{16em} }
+      \renewcommand{\arraystretch}{2}
+      \begin{tabular}{ p{16em} p{17em} p{16em} }
         \myhref{https://garciparedes.me}{\faHome\quad Website: garciparedes.me}
         &
-        \myhref{tel:34696904878}{\faPhone\quad Phone: +34 696 904 878}
-        &
         \myhref{mailto:sergio@garciparedes.me}{\faEnvelope\quad Email: sergio@garciparedes.me}
+        &
+        \myhref{https://es.linkedin.com/in/garciparedes/en}{\faLinkedin\quad LinkedIn: Sergio García Prado}
         \\
 
         \myhref{https://github.com/garciparedes}{\faGithub\quad GitHub: @garciparedes}
         &
-        \myhref{https://es.linkedin.com/in/garciparedes/en}{\faLinkedin\quad LinkedIn: Sergio García Prado}
-        &
         \myhref{https://scholar.google.es/citations?user=X3Mb7BAAAAAJ}{\faGraduationCap\quad Scholar: Sergio García Prado}
-        \\
-
+        &
         \myhref{https://stackoverflow.com/users/3921457/garciparedes}{\faStackOverflow\quad StackOverflow: @garciparedes}
-        &
-        \myhref{https://www.kaggle.com/garciparedes}{\faTrophy\quad Kaggle: @garciparedes}
-        &
-        \myhref{https://medium.com/@garciparedes}{\faMedium\quad Medium: @garciparedes}
         \\ \\
 
       \end{tabular}
@@ -69,46 +62,9 @@
 
   \section{summary}
 
-    Hi! My name is Sergio and now I'm enrolled in Bachelor's Degree in \important{Statistics} at \UVa. The reason is because during my Bachelor's Degree in \important{Computer Engineering} the mathematical curiosity arose me. For this, I think the merge of my previous engineering knowledge combined with my future scientific learning will enrich me to raise and solve complex problems. In following paragraphs I will describe my professional profile.
-
-    During my first years of coding I've learned \texttt{Java} at University, and \texttt{Android} on my own, then I developed \important{\EvaluaMe} app. After that, I started to be curious about web development (I really like \texttt{TypeScript}, especially when is boosted with \texttt{Angular}). Also, I've worked with \texttt{PHP} and \texttt{WordPress} during my internship at \important{\Brooktec}, but I prefer not to work with those technologies anymore.
-
-    In the writing area, I've started to use \LaTeX\ as a clean way to submit class assignments at University, but it has become one of my passions. Another of my favourite ways to communicate things (especially when code is involved) is \texttt{Jupyter Notebook}.
-
-    During my Computer's Engineering Degree last year I focused my work on numerical computation, statistical methods, machine learning algorithms and graph problems. Mostly using \texttt{Python} and libraries like \texttt{NumPy}, \texttt{Pandas}, \texttt{NetworkX}, etc. Also, in my final degree project of Computer Engineering, I've started an open source project called \important{\TFGraph} which consist of a graph library  on top of \texttt{TensorFlow}. To learn more about packaging and library distribution I've developed \important{\ngkatex}, an Angular module distributed over \texttt{npm} that allows you to visualize \TeX\ math expressions on browsers boosted by \texttt{KaTeX}.
-
-    Due to my data passion, I want to focus my future work on statistical computation, that is everything related with the research and implementation of new techniques to process, analyze and predict data. For this reason, I've learned \texttt{R} language and libraries like \texttt{tidyverse}, \texttt{data.table}, etc. Currently, I'm involved in learning amazing things related with probability theory, inference techniques, classification methods, multivariate analysis, etc.
-
-    In previous paragraphs I've explained my background and favorite technologies that I love to use. Bellow, I'll show you some of my skills in more abstract way:
-
-    \noindent
-    \begin{minipage}[t]{0.5\linewidth}
-      \begin{itemize}
-      	\item{High Performance Algorithms}
-  	    \item{Data Structures}
-        \item{Parallel Programming}
-        \item{Statistical Computation}
-        \item{Data Visualization}
-        \item{Machine Learning Techniques}
-      \end{itemize}
-    \end{minipage}%
-    \begin{minipage}[t]{0.5\linewidth}
-      \begin{itemize}
-        \item{Graph Theory}
-      	\item{Academic Writting}
-        \item{Research Work}
-        \item{Code Standards (OOP - Docs - Tests)}
-        \item{Agile Methodologies}
-        \item{Version Control Systems (VCS)}
-      \end{itemize}
-    \end{minipage}
-    \par\bigskip
-
-    As you've seen I want to work in positions related with Machine Learning, Big Data and Data Analysis. If you're offering for a related job don't hesitate to contact me. In the following pages you can visualize my background in a more classical way.
+    Hi everyone! I'm a double Bachelor's degree graduate in Computer Engineering and (future graduate) in Statistics from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on Combinatorial Optimization via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to solve any kind of problem. I'm curious about Natural Language Processing and Sequential Models.
 
 %-------------------------------------------------------------------------------
-
-  \pagebreak
 
 %-------------------------------------------------------------------------------
 %	WORK SECTION
@@ -119,10 +75,16 @@
     \begin{entrylist}
 
       \entry
-      {2018/09 -- present}
+      {2019/09 -- present}
       {Software Engineer}
       {\Unlimiteck}
       {}
+
+      \entry
+      {2018/09 -- 2019/09}
+      {Remote Software Engineer}
+      {\Unlimiteck}
+      {1 year}
 
       \entry
       {2018/06 -- 2018/08}
@@ -180,6 +142,37 @@
 
 %-------------------------------------------------------------------------------
 
+%-------------------------------------------------------------------------------
+%	CONTESTS SECTION
+%-------------------------------------------------------------------------------
+
+  \section{contests}
+
+    \begin{entrylist}
+
+      \entry
+      {2019}
+      {HashCode}
+      {Google}
+      {20th of Spain and 801th of the world}
+
+      \\
+      \entry
+      {2018}
+      {HashCode}
+      {Google}
+      {1th of Hub and 30th of Spain}
+
+      \\
+      \entry
+      {2017}
+      {T3chFest}
+      {UC3M}
+      {17th position}
+
+    \end{entrylist}
+
+%-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
 %	PUBLICATIONS SECTION
@@ -248,6 +241,18 @@
 
       \entry
       {2019}
+      {\myhref{https://www.unibo.it/en/teaching/course-unit-catalogue/course-unit/2019/423526}{Statistical Models and Applications}}
+      {\UNIBO}
+      {Score: 28/30}
+
+      \entry
+      {}
+      {\myhref{https://www.unibo.it/en/teaching/course-unit-catalogue/course-unit/2018/423554}{Advanced Survival Analysis}}
+      {\UNIBO}
+      {Score: 28/30}
+
+      \entry
+      {}
       {\myhref{https://alojamientos.uva.es/guia_docente/uploads/2018/549/47102/1/Documento.pdf}{Categorical Data Analysis}}
       {\UVa}
       {Score: 9.0/10.0}
