Minor improvements on layout margins

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -5,6 +5,7 @@
 \usepackage[english]{babel}
 \usepackage{fontawesome}
 \usepackage{fancyhdr}
+\usepackage{setspace}
 
 \newcommand{\myhref}[2]{\href[pdfnewwindow=true]{#1}{#2}}
 \newcommand{\important}[1]{\textbf{\mbox{#1}}}
@@ -33,6 +34,7 @@
 
   \section{social}
 
+    \vspace{-2em}
     \begin{center}
       \renewcommand{\arraystretch}{2}
       \begin{tabular}{ p{16em} p{17em} p{16em} }
@@ -48,8 +50,7 @@
         \myhref{https://scholar.google.es/citations?user=X3Mb7BAAAAAJ}{\faGraduationCap\quad Scholar: Sergio García Prado}
         &
         \myhref{https://stackoverflow.com/users/3921457/garciparedes}{\faStackOverflow\quad StackOverflow: @garciparedes}
-        \\ \\
-
+        \\
       \end{tabular}
     \end{center}
 
@@ -230,7 +231,6 @@
 
 %-------------------------------------------------------------------------------
 
-
 %-------------------------------------------------------------------------------
 %	ACADEMIC REMARKS SECTION
 %-------------------------------------------------------------------------------
@@ -408,7 +408,6 @@
 %	INTERESTS SECTION
 %-------------------------------------------------------------------------------
 
-
   \section{interests}
 
     \textbf{professional:} computing problems, data analysis, algorithms, machine learning, design patterns, web design, software design, internet of things
@@ -416,6 +415,5 @@
     \textbf{personal:} motor sports, rap and classic music, turntablism, cooking, technology
 
 %-------------------------------------------------------------------------------
-
 
 \end{document}
