* Changed headline * Included "jinete" in projects.

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -18,15 +18,16 @@
 \newcommand{\EvaluaMe}{\myhref{https://play.google.com/store/apps/details?id=com.garciparedes.evaluame}{EvaluaMe}}
 \newcommand{\TFGraph}{\myhref{https://github.com/tfgraph}{TFGraph}}
 \newcommand{\ngkatex}{\myhref{https://github.com/garciparedes/ng-katex}{ng-katex}}
+\newcommand{\jinete}{\myhref{https://github.com/garciparedes/jinete}{jinete}}
 
 \pagestyle{fancy}
 \fancyhf{}
-\rhead{Software Engineering | Data Science | Research | Scientific Computation}
+\rhead{Software Engineering | Statistics | RPA | Combinatorial Optimization}
 \lhead{Sergio García Prado}
 
 \begin{document}
 
-  \header{Sergio}{GarcíaPrado}{Software Engineering | Data Science | Research | Scientific Computation}
+  \header{Sergio}{GarcíaPrado}{Software Engineering | Statistics | RPA | Combinatorial Optimization}
 
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -119,6 +120,13 @@
 
     \begin{entrylist}
 
+      \entry
+      {2019 -- present}
+      {\jinete}
+      {Angular}
+      {High Performance solving suite for the Pickup and Delivery Problem and its related extensions}
+
+      \\
       \entry
       {2017 -- present}
       {\ngkatex}
