* Included "Tuenti Challenge 9" result. * Minor improvements.

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -77,19 +77,19 @@
     \begin{entrylist}
 
       \entry
-      {2019/09 -- present}
+      {2018/06 -- present}
       {Software Engineer}
       {\Unlimiteck}
-      {}
+      {current}
 
       \entry
-      {2018/09 -- 2019/09}
+      {}
       {Remote Software Engineer}
       {\Unlimiteck}
       {1 year}
 
       \entry
-      {2018/06 -- 2018/08}
+      {}
       {Software Engineer Intern}
       {\Unlimiteck}
       {3 months}
@@ -123,7 +123,7 @@
       \entry
       {2019 -- present}
       {\jinete}
-      {Angular}
+      {Python}
       {High Performance solving suite for the Pickup and Delivery Problem and its related extensions}
 
       \\
@@ -161,6 +161,12 @@
 
       \entry
       {2019}
+      {Tuenti Challenge 9}
+      {Tuenti}
+      {61st position}
+
+      \entry
+      {}
       {HashCode}
       {Google}
       {20th of Spain and 801th of the world}
